- Fixed layout issue of ui range component (range input overlapping number input)

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,10 @@ div [class*="right floated"] {
     margin-top: 50px;
 }
 
+.ml-50 {
+    margin-left: 50px;
+}
+
 .pl-50 {
     padding-left: 50px;
 }
